--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<h1>Testimonials</h1>
+		<div class="content">
+		<p>This product is amazin! I highly recomended it to anyone in need of a solution like this.</p>
+			<p class="author">-John Doe</p>
+		</div>
+		<div class="content">			<p>I have been using this for a few weeks now and it has compeletely transformed my workflow.</p>
+			<p class="author">-jonw Smith</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
